gccida/c2/ggc_alloc_string
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_alloc_string/src/stringpool.c:562:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v3] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_alloc_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_alloc_string/src/obj/stringpool.o] Error 1
